welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:40: error: Int(6) does not take parameters
  while (depY!=6()){
                ^